--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,8 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
 
+    title Tribo Viva - Rede de Consumo Colaborativo
+
   body
     = initjs_tag "TriboViva"
     = render 'pages/flash' if flash.any?
