--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -12,4 +12,4 @@ footer.footer
                 li style="#{'display: none;' if params[:action] == 'new_purchase'}"
                   = link_to 'Sobre', about_path
                 li
-                  = link_to 'Contato', 'mailto:contato@codeland.com.br?subject=Olá Tribo Viva!'
+                  = link_to 'Contato', 'mailto:tribo@triboviva.com.br?subject=Olá Tribo Viva!'
