--- a/app/assets/stylesheets/organisms/_hero.scss
+++ b/app/assets/stylesheets/organisms/_hero.scss
@@ -1,11 +1,11 @@
 .hero {
-  background-image: asset-url('bg-cover.png');
+  background-image: asset-url('bg-cover.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   width: 100%;
-  min-height: 600px;
-  height: 600px;
+  min-height: 510px;
+  height: 510px;
   padding: 40px 0 20px 0;
   display: table;
 }
@@ -13,6 +13,8 @@
 .hero__slogan {
   display: table-cell;
   vertical-align: middle;
+  h1 { text-shadow: 3px 3px 3px rgba(0, 0, 0, .5); }
+  span { text-shadow: 1px 1px 2px rgba(0, 0, 0, .6); }
 }
 
 .hero__description {
