--- a/app/assets/stylesheets/organisms/_purchase.scss
+++ b/app/assets/stylesheets/organisms/_purchase.scss
@@ -19,10 +19,13 @@
   padding: 20px 40px 60px 40px;
   width: 50%;
 
-  h3 { margin-bottom: 5px; }
+  h3 { margin-bottom: 15px; }
 }
 
-.purchase-info__producer { margin-bottom: 15px; }
+.purchase-info__producer {
+  margin-top: -10px;
+  margin-bottom: 15px;
+}
 
 .offer-info__products,
 .offer-info__collect { margin-bottom: 40px; }
@@ -37,6 +40,14 @@
     margin-bottom: 10px;
 
     &[type="radio"]{ margin-right: 5px; }
+  }
+  table.table-taxes {
+    tr {
+      td {
+        padding: 0;
+        border: 0;
+      }
+    }
   }
 }
 
