Adds phone to User model

--- a/app/views/offers/new_purchase.html.slim
+++ b/app/views/offers/new_purchase.html.slim
@@ -85,7 +85,9 @@ section.purchase
                 = f.label :unregistered_user_email, 'Email'
                 = f.text_field :unregistered_user_email, class: 'form-control', placeholder: 'exemplo@email.com'
                 = f.label :unregistered_user_cpf, 'CPF (necessário para emissão de NF)'
-                = f.text_field :unregistered_user_cpf, class: 'form-control'
+                = f.text_field :unregistered_user_cpf, class: 'form-control cpf', placeholder: '999.999.999-99'
+                = f.label :unregistered_user_phone, 'Telephone'
+                = f.text_field :unregistered_user_phone, class: 'form-control phone', placeholder: '(51) 3779-9710'
                 br
               br
 
