--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -48,7 +48,7 @@ section.offer-info
                   span = @offer.delivery_time_range
                 li
                   span.glyphicon.glyphicon-map-marker
-                  span = @offer.deliver_coordinator.address
+                  span = @offer.deliver_coordinator.partial_address
             .offer-info__tax
               h2.title--up.text--green Taxas operacionais
               table.table
