--- a/app/assets/stylesheets/organisms/_hero.scss
+++ b/app/assets/stylesheets/organisms/_hero.scss
@@ -8,16 +8,26 @@
   height: 510px;
   padding: 40px 0 20px 0;
   display: table;
+
+  .col-centered {
+    background: rgba(0, 0, 0, 0.6) none repeat scroll 0% 0%;
+    border-top: 4px solid rgb(0, 179, 149);
+    padding: 0px 20px 24px;
+    border-bottom: 4px solid rgb(0, 179, 149);
+    margin-top: 68px;
+  }
 }
 
 .hero__slogan {
   display: table-cell;
   vertical-align: middle;
-  h1 { text-shadow: 3px 3px 3px rgba(0, 0, 0, .5); }
-  span { text-shadow: 1px 1px 2px rgba(0, 0, 0, .6); }
+
+  h1 { font-size: 51px; }
 }
 
 .hero__description {
   font-weight: 300;
   font-size: 21px;
+  line-height: 22px;
+  display: inline-block;
 }
