--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -5,8 +5,8 @@ section.hero
  .hero__slogan.text-center.text--white
    .container
      .row
-       .col-md-8.col-centered
-         h1.title--xl Rede de Consumo Colaborativo
+       .col-md-7.col-centered
+         h1.title--xl.title--up Rede de Consumo Colaborativo
          span.hero__description A Tribo Viva é um novo sistema de consumo, formado por cidadãos e produtores locais de alimentos orgânicos. Nossa rede exclui atravessadores, viabilizando o acesso contínuo e sustentável a uma alimentação com mais saúde, inclusão social e melhor custo-benefício para todos os envolvidos.
 
 section.offers
