Changes header color

--- a/app/assets/stylesheets/base/_variables-colors.scss
+++ b/app/assets/stylesheets/base/_variables-colors.scss
@@ -5,6 +5,7 @@ $info:            #5e98a3;
 $brown-light:     #e8decd;
 $brown-medium:    #998c76;
 $brown-dark:      #463f32;
+$brown-tribo:     #736856;
 
 $black-medium:    #333333;
 
