--- a/app/assets/stylesheets/organisms/_header.scss
+++ b/app/assets/stylesheets/organisms/_header.scss
@@ -3,7 +3,7 @@
   width: 100%;
   position: absolute;
   z-index: 100;
-  background-color: $brown-medium;
+  background-color: $brown-tribo;
 }
 
 .header__logo {
@@ -12,4 +12,3 @@
   width: 310px;
   padding: 23px 30px 17px 30px;
 }
-
