Adds social networks

--- a/app/views/partials/_footer.html.slim
+++ b/app/views/partials/_footer.html.slim
@@ -6,7 +6,7 @@ footer.footer
           .col-md-6
             .pull-left
               = link_to image_tag('logo-triboviva.png'), root_path, class: 'footer__logo'
-              = link_to image_tag('logo-codeland.png'), 'http://www.codeland.com.br', title: 'CODELAND - Desenvolvimento de sistemas web', class: 'footer__logo'
+              = link_to image_tag('logo-codeland.png'), 'http://www.codeland.com.br', title: 'Desenvolvido por CODELAND - Desenvolvimento de sistemas web', class: 'footer__logo'
           .col-md-6
             .pull-right
               ul
