--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -64,7 +64,11 @@ section.about
           .col-md-4
             h2.title--up.text--brown Fique Conectado
             .big
-              = link_to 'Facebook', root_path
+              = link_to 'Facebook', 'https://www.facebook.com/triboviva', title: 'Curta nossa página'
+              br
+              = link_to 'Twitter', 'https://twitter.com/TriboViva', title: 'Siga-nos no Twitter'
+              br
+              = link_to 'Instagram', 'https://instagram.com/triboviva/', title: 'Siga-nos no Instagram'
             / .big Inscreva-se na nossa newsletter
             / .input-group
             /   input.form-control type="text" placeholder="example@email.com"
