Improves hero h1 style

--- a/app/assets/stylesheets/organisms/_hero.scss
+++ b/app/assets/stylesheets/organisms/_hero.scss
@@ -22,7 +22,10 @@
   display: table-cell;
   vertical-align: middle;
 
-  h1 { font-size: 51px; }
+  h1 {
+    font-size: 50px;
+    @media screen and (max-width: 1199px) { font-size: 40px; }
+  }
 }
 
 .hero__description {
