--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -43,8 +43,8 @@ section.offers
                       .span
                         = distance_of_time_in_words(offer.offer_ends_at, Time.now)
                       .small restantes
-                    .progress
-                      .progress-bar.progress-bar-yellow role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"
+                    .progress[title="Cotas adquiridas"]
+                      .progress-bar.progress-bar-yellow[role="progressbar" aria-valuenow="#{progress_bar_percentage(offer)}" aria-valuemin="0" aria-valuemax="100" style="width: #{progress_bar_percentage(offer)}%"]
 
 section.about
   .container
