--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -26,7 +26,7 @@ section.offers
                     p.card__info__price
                       span = number_to_currency offer.coordinator_tax + offer.operational_tax + offer.value
                       span.small
-                        |  / valor un. cota
+                        |  / valor de 1 cota
                     h1.card__info__title.title--up = link_to offer.title, offer_path(offer)
                     span.card__info__place
                       span.glyphicon.glyphicon-grain
