Adds address to user

--- a/app/views/offers/new_purchase.html.slim
+++ b/app/views/offers/new_purchase.html.slim
@@ -88,6 +88,8 @@ section.purchase
                 = f.text_field :unregistered_user_cpf, class: 'form-control cpf', placeholder: '999.999.999-99'
                 = f.label :unregistered_user_phone, 'Telefone'
                 = f.text_field :unregistered_user_phone, class: 'form-control phone', placeholder: '(51) 3779-9710'
+                = f.label :unregistered_user_address, 'Endereço'
+                = f.text_field :unregistered_user_address, class: 'form-control', placeholder: 'Rua Logradouro 555'
                 br
               br
 
