Fixes wrong typo COORDEANDOR

--- a/app/views/purchases/success.html.slim
+++ b/app/views/purchases/success.html.slim
@@ -28,7 +28,7 @@ section.purchase
               span.offer-info__coordinator__avatar style="background-image: url(#{@purchase.offer.deliver_coordinator.avatar});"
               span.offer-info__coordinator__name
                 p = @purchase.offer.deliver_coordinator.name
-                .small Coordeandor(a) de Entrega
+                .small Coordenador(a) de Entrega
             p As compras devem ser retiradas na data e local abaixo:
             ul
               li
